--- a/app/index.html
+++ b/app/index.html
@@ -22,26 +22,21 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
+      <div class="navbar navbar-inverse" role="navigation">
         <div class="container">
           <div class="navbar-header">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
 
-            <a class="navbar-brand" href="#/">pooIhmExemples</a>
+            <a class="navbar-brand" href="#/">Annuaire by Cédric</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
               <li><a href="#/">Home</a></li>
-              <li><a ng-href="#/add">Add/Update User</a></li>
-              <li><a ng-href="#/users">Utilisateurs</a></li>
+              <li><a ng-href="#/users">Users</a></li>
+              <li><a ng-href="#/projects">Projects</a></li>
+
 
             </ul>
           </div>
@@ -88,9 +83,10 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/users.js"></script>
-        <script src="scripts/controllers/add.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/controllers/projects.js"></script>
+        <script src="scripts/controllers/role.js"></script>
+
+    <!-- endbuild -->
 </body>
 </html>
